# lychee

./: README.md  results.sarif  results.xml
.github/workflows/: auto-merge.yml  docker.yml  junit-demo.yml  links.yml  release-binary.yml  sarif-test.yml
examples/flaresolverr_chain/: Cargo.toml
examples/flaresolverr_chain/src/: main.rs
fixtures/: TEST.md  TEST_VERBATIM.html
fixtures/configs/: smoketest.toml
fixtures/lycheeignore-limit/: .lycheeignore
lychee-bin/: Cargo.toml
lychee-bin/src/: client.rs  main.rs  options.rs  process_ext.rs  stats.rs
lychee-bin/src/commands/: check.rs  generate.rs
lychee-bin/src/config/: mod.rs
lychee-bin/src/extism/: mod.rs
lychee-bin/src/extism/plugin/: Cargo.toml
lychee-bin/src/extism/plugin/src/: lib.rs
lychee-bin/src/formatters/stats/: compact.rs  detailed.rs  junit.rs  mod.rs
lychee-bin/tests/: cli.rs
lychee-lib/: Cargo.toml
lychee-lib/src/: client.rs  collector.rs  lib.rs  remap.rs  retry.rs
lychee-lib/src/chain/: mod.rs
lychee-lib/src/checker/: file.rs  website.rs
lychee-lib/src/extract/: css.rs  markdown.rs
lychee-lib/src/ratelimit/: config.rs  mod.rs
lychee-lib/src/textfrag/: mod.rs
lychee-lib/src/textfrag/extract/: fragdirtok.rs
lychee-lib/src/textfrag/types/: blockcontent.rs  error.rs  fragdirective.rs  kind.rs  mod.rs  status.rs  textdirective.rs  url.rs
lychee-lib/src/types/: cache.rs  error.rs  methods.rs  mod.rs  response.rs  status.rs
lychee-lib/src/types/process_ext/: mod.rs
lychee-lib/src/utils/: fragment_checker.rs
